# GTK_helloworld

./: CMakeLists.txt
src/: builder2.ui  builder3.css  main.c
