cmake_minimum_required(VERSION 3.19)
project(GTKHelloWorld)

set(CMAKE_C_STANDARD 11)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(GMODULE REQUIRED gmodule-export-2.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_LIBRARIES(${GTK3_LIBRARY_DIRS})

INCLUDE_DIRECTORIES(${GMODULE_INCLUDE_DIRS})
LINK_LIBRARIES(${GMODULE_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

INCLUDE_DIRECTORIES("include")

set(CMAKE_C_FLAGS_RELEASE -mwindows)

SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/packet_app/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} DIR_SRCS)

ADD_EXECUTABLE(GTKHelloWorld ${DIR_SRCS})
TARGET_LINK_LIBRARIES(GTKHelloWorld ${GTK3_LIBRARIES} ${GMODULE_LIBRARIES})